--- a/site/index.html
+++ b/site/index.html
@@ -24,9 +24,6 @@
           <a href="./blog" target="_blank" title="Blog"><i class="fas fa-rss"></i></a>
           <a href="https://github.com/rauldipeas" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
           <a href="https://rauldipeas.tumblr.com" target="_blank" title="Tumblr"><i class="fab fa-tumblr"></i></a>
-          <!--<a href="https://mastodon.social/@raul_dipeas" target="_blank" title="Mastodon"><i class="fab fa-mastodon"></i></a>-->
-          <a href="https://t.me/rauldipeas" target="_blank" title="Telegram"><i class="fab fa-telegram-plane"></i></a>
-          <!--<a href="https://app.element.io/#/user/@raul_dipeas:matrix.org" target="_blank" title="Matrix"><i class="fas fa-user-shield"></i></a>-->
           <a href="https://presearch.com/search?q=raul+dipeas" target="_blank" title="Pesquisa"><i class="fas fa-search"></i></a>
         </div>
       <div id="main">
@@ -41,33 +38,15 @@
           <p style="filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 1));"><a href="https://dev.to/rauldipeas" target="_blank" title="Dev.to"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/vscode.svg"> Técnico em informática</a> &nbsp;&bull;&nbsp; <a href="https://soundcloud.com/rauldipeas" target="_blank" title="SoundCloud"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/soundcloud.svg"> Músico</a> &nbsp;&bull;&nbsp; <a href="https://trakt.tv/users/rauldipeas" target="_blank" title="Trakt"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/exmplayer.svg"> Cinéfilo</a></p>
           <nav>
             <ul>
-              <!--<li><a href="https://rauldipeas.github.io/respin-rdx" target="_blank" title="Respin RDX"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/ubuntu-tweak.svg" class="links-svg"></a></li>-->
-              <!--<li><a href="https://github.com/rauldipeas/respin-rdx" target="_blank" title="Respin RDX"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/ubuntu-tweak.svg" class="links-svg"></a></li>-->
-              <!--<li><a href="./blog" title="Blog"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/blogilo.svg" class="links-svg"></a></li>-->
-              <!--<li><a href="https://studio.sessionwire.io/studio/rauldipeas" target="_blank" title="Sessionwire"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/f8baaa5c043be7a50de10e4320124c372d537725/Papirus-GTK/48x48/apps/ocenaudio.svg" class="links-svg"></a></li>-->
-              <!--<li><a href="https://twitter.com/rauldipeas" target="_blank" title="Twitter"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/twitter.svg" class="links-svg"></a></li>-->
-              <li><a href="assets/images/deltachat-qr.png" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/deltachat.svg" class="links-svg">DeltaChat</a></li>
+              <li><a href="https://rauldipeas.substack.com" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/rednotebook.svg" class="links-svg">Substack</a></li>
               <li><a href="https://keybase.io/rauldipeas_wkb" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/keybase.svg" class="links-svg">Keybase</a></li>
               <li><a href="https://phanpy.social/#/mastodon.social/a/1202480?media=1" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/hyperspace.svg" class="links-svg blob">Mastodon</a></li>
               <li><a href="https://instagram.com/raul_dipeas" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg">Instagram</a></li>
               <li><a href="https://youtube.com/rauldipeas" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/youtube.svg" class="links-svg">YouTube</a></li>
-              <!--<li><a href="https://open.spotify.com/artist/29UanR5qAOzZA2ktvGCzpl" target="_blank" title="Spotify (Alvenaria)"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/spotify-client.svg" class="links-svg"></a></li>-->
-              <!--<li><a href="https://app.element.io/#/user/@raul_dipeas:matrix.org" target="_blank" title="Element (Matrix)"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/element-desktop.svg" class="links-svg"></a></li>-->
             </ul>
           </nav>
         </header>
       </div>
-      <!--<div class="youtube">
-        <iframe width="280" height="157,5"
-        src="https://www.youtube.com/embed/live_stream?channel=UCDujDO27n_ItUi_mPDXEZpQ&autoplay=1" frameborder="0"
-        allowfullscreen>
-      </iframe>
-    </div>-->
-    <!--<div>
-      <a href="https://youtube.com/rauldipeas" target="_blank">
-        <img src="assets/images/youtube.gif" class="stream-badge">
-      </a>
-    </div>-->
     <!--<div id="venom-button"></div>-->
   </div>
   <script src="assets/js/carousel.js"></script>
