--- a/site/index.html
+++ b/site/index.html
@@ -52,7 +52,8 @@
   <script src="assets/js/carousel.js"></script>
   <!--<script src="assets/js/venom-button.js"></script>-->
   <!--<script src="assets/js/venom-button.min.js"></script>-->
-  <script src="assets/js/chatwoot.js"></script>
+  <!--<script src="assets/js/chatwoot.js"></script>-->
+  <script src="assets/js/crisp.js"></script>
   <script src="assets/js/load.js"></script>
 </body>
 </html>
