--- a/site/index.html
+++ b/site/index.html
@@ -21,7 +21,7 @@
         <img src="assets/images/backgrounds/street-2.gif" class="animated-background">
       </div>
         <div class="topnav">
-          <a href="./blog" target="_blank" title="Blog"><i class="fas fa-rss"></i></a>
+          <a href="./blog" title="Blog"><i class="fas fa-rss"></i></a>
           <a href="https://github.com/rauldipeas" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
           <a href="https://rauldipeas.tumblr.com" target="_blank" title="Tumblr"><i class="fab fa-tumblr"></i></a>
           <a href="https://presearch.com/search?q=raul+dipeas" target="_blank" title="Pesquisa"><i class="fas fa-search"></i></a>
@@ -38,6 +38,7 @@
           <p style="filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 1));"><a href="https://dev.to/rauldipeas" target="_blank" title="Dev.to"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/vscode.svg"> Técnico em informática</a> &nbsp;&bull;&nbsp; <a href="https://soundcloud.com/rauldipeas" target="_blank" title="SoundCloud"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/soundcloud.svg"> Músico</a> &nbsp;&bull;&nbsp; <a href="https://trakt.tv/users/rauldipeas" target="_blank" title="Trakt"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/exmplayer.svg"> Cinéfilo</a></p>
           <nav>
             <ul>
+              <li><a href="https://debian-rdx.sourceforge.io" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/distributor-logo-debian.svg" class="links-svg">Debian RDX</a></li>
               <li><a href="https://rauldipeas.substack.com" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/rednotebook.svg" class="links-svg">Substack</a></li>
               <li><a href="https://keybase.io/rauldipeas_wkb" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/keybase.svg" class="links-svg">Keybase</a></li>
               <li><a href="https://phanpy.social/#/mastodon.social/a/1202480?media=1" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/hyperspace.svg" class="links-svg blob">Mastodon</a></li>
