--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
-    <link rel="stylesheet" href="assets/css/venom-button.min.css">
     <noscript>
       <link rel="stylesheet" href="assets/css/noscript.css" />
     </noscript>
@@ -23,16 +22,17 @@
         <div class="topnav">
           <a href="./blog" title="Blog"><i class="fas fa-rss"></i></a>
           <a href="https://github.com/rauldipeas" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
-          <a href="https://rauldipeas.tumblr.com" target="_blank" title="Tumblr"><i class="fab fa-tumblr"></i></a>
           <a href="https://presearch.com/search?q=raul+dipeas" target="_blank" title="Pesquisa"><i class="fas fa-search"></i></a>
         </div>
       <div id="main">
         <header id="header">
           <div>
-            <img class="mySlides animated-avatar" src="assets/images/avatar/avatar 1.svg">
-            <img class="mySlides animated-avatar" src="assets/images/avatar/avatar 2.svg">
-            <img class="mySlides animated-avatar" src="assets/images/avatar/avatar 3.svg">
-            <img class="mySlides animated-avatar" src="assets/images/avatar/avatar 4.svg">
+            <a rel="me" href="https://mastodon.social/@raul_dipeas" target="_blank">
+              <img class="mySlides animated-avatar" src="assets/images/avatar/avatar 1.svg">
+              <img class="mySlides animated-avatar" src="assets/images/avatar/avatar 2.svg">
+              <img class="mySlides animated-avatar" src="assets/images/avatar/avatar 3.svg">
+              <img class="mySlides animated-avatar" src="assets/images/avatar/avatar 4.svg">
+            </a>
           </div>
           <h1>Raul Dipeas</h1>
           <p style="filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 1));"><a href="https://dev.to/rauldipeas" target="_blank" title="Dev.to"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/vscode.svg"> Técnico em informática</a> &nbsp;&bull;&nbsp; <a href="https://soundcloud.com/rauldipeas" target="_blank" title="SoundCloud"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/soundcloud.svg"> Músico</a> &nbsp;&bull;&nbsp; <a href="https://trakt.tv/users/rauldipeas" target="_blank" title="Trakt"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/exmplayer.svg"> Cinéfilo</a></p>
@@ -48,12 +48,8 @@
           </nav>
         </header>
       </div>
-    <!--<div id="venom-button"></div>-->
   </div>
   <script src="assets/js/carousel.js"></script>
-  <!--<script src="assets/js/venom-button.js"></script>-->
-  <!--<script src="assets/js/venom-button.min.js"></script>-->
-  <!--<script src="assets/js/chatwoot.js"></script>-->
   <script src="assets/js/crisp.js"></script>
   <script src="assets/js/load.js"></script>
 </body>
