--- a/site/index.html
+++ b/site/index.html
@@ -35,7 +35,7 @@
             </a>
           </div>
           <h1>Raul Dipeas</h1>
-          <p style="filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 1));"><a href="https://dev.to/rauldipeas" target="_blank" title="Dev.to"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/vscode.svg"> Técnico em informática</a> &nbsp;&bull;&nbsp; <a href="https://bandlab.com/rauldipeas" target="_blank" title="BandLab"><img src="assets/images/bandlab.svg" width="16px"> Músico</a> &nbsp;&bull;&nbsp; <a href="https://trakt.tv/users/rauldipeas" target="_blank" title="Trakt"><img src="assets/images/trakt.tv.png" width="16px"> Cinéfilo</a></p>
+          <p style="filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 1));"><a href="https://dev.to/rauldipeas" target="_blank" title="Dev.to"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/16x16/apps/vscode.svg"> Técnico em informática</a> &nbsp;&bull;&nbsp; <a href="https://bandlab.com/rauldipeas" target="_blank" title="BandLab"><img src="assets/images/bandlab.png" width="16px"> Músico</a> &nbsp;&bull;&nbsp; <a href="https://trakt.tv/users/rauldipeas" target="_blank" title="Trakt"><img src="assets/images/trakt.tv.png" width="16px"> Cinéfilo</a></p>
           <nav>
             <ul>
               <li><a href="https://respin-rdx.sourceforge.io" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/tux.svg" class="links-svg">Respin RDX</a></li>
