--- a/site/index.html
+++ b/site/index.html
@@ -39,10 +39,10 @@
           <nav>
             <ul>
               <li><a href="https://respin-rdx.sourceforge.io" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/tux.svg" class="links-svg">Respin RDX</a></li>
-              <li><a href="https://rauldipeas.substack.com" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/rednotebook.svg" class="links-svg">Substack</a></li>
+              <li><a href="https://rauldipeas.substack.com" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/fbreader.svg" class="links-svg">Substack</a></li>
+              <li><a href="https://phanpy.social/#/mastodon.social/a/1202480?media=1" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/mstdn.svg" class="links-svg blob">Mastodon</a></li>
               <li><a href="https://keybase.io/rauldipeas_wkb" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/keybase.svg" class="links-svg">Keybase</a></li>
-              <li><a href="https://phanpy.social/#/mastodon.social/a/1202480?media=1" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/hyperspace.svg" class="links-svg blob">Mastodon</a></li>
-              <li><a href="https://instagram.com/raul_dipeas" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg">Instagram</a></li>
+              <!--<li><a href="https://instagram.com/raul_dipeas" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/instagram.svg" class="links-svg">Instagram</a></li>-->
               <li><a href="https://youtube.com/rauldipeas" target="_blank"><img src="https://raw.githubusercontent.com/PapirusDevelopmentTeam/papirus-icon-theme/master/Papirus/64x64/apps/youtube.svg" class="links-svg">YouTube</a></li>
             </ul>
           </nav>
