--- a/site/index.html
+++ b/site/index.html
@@ -13,6 +13,7 @@
     <link rel="icon" href="assets/images/avatar/avatar 1.svg" type="image/svg">
     <script src="assets/js/counter.js"></script>
     <meta name="p:domain_verify" content="9d55e8ad2e83d81e626eaf68b3cd30ce"/>
+    <meta name="ocs-site-verification" content="87ff12b08da7a4bc82dd7b85edaf1b25"/>
   </head>
   <body class="is-preload" style="background: #000">
     <div id="wrapper">
