--- a/site/index.html
+++ b/site/index.html
@@ -21,8 +21,9 @@
         <img src="assets/images/backgrounds/street-2.gif" class="animated-background">
       </div>
         <div class="topnav">
-          <a href="./blog" title="Blog"><i class="fas fa-rss"></i></a>
+          <a href="./social" title="Social"><i class="fas fa-camera-retro"></i></a>
           <a href="https://github.com/rauldipeas" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+          <a href="./blog" title="Blog"><i class="fas fa-rss"></i></a>
           <a href="https://presearch.com/search?q=raul+dipeas" target="_blank" title="Pesquisa"><i class="fas fa-search"></i></a>
         </div>
       <div id="main">
